# git-machete

./: .dockerignore  .gitignore  .readthedocs.yaml  .remarkrc-allow-dead-urls.yml  .remarkrc.yml  .remarkrc_master.yml  .stestr.conf  .travis.yml  .typos.toml  AGENTS.md  BADGES.md  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  PACKAGES.md  README.md  RELEASE_NOTES.md  _git_machete  cache_fix_analysis.md  diff.txt  driver.py  git-machete  git-machete-prompt  install.sh  mypy.ini  requirements.cmd_docs.txt  requirements.coverage-py36.txt  requirements.coverage.py36-txt  requirements.coverage.txt  requirements.docs.txt  requirements.isort.txt  requirements.mypy.py36-txt  requirements.mypy.txt  requirements.pep8-check.txt  requirements.pep8.txt  requirements.py-docs.txt  requirements.pypi-deploy.txt  (+10 more)
.circleci/: config.yml
.cursor/: rules
.github/: dependabot.yml
ci/: Dockerfile-deb-build  Dockerfile-deb-test-python  Dockerfile-deb-test-python3  Dockerfile-stdeb  README-stdeb.md  ci-dockerized.sh  ci-run-commons.sh  ci-run.sh  docker-build-and-push.sh  docker-pull-or-build-and-push.sh  export-hash.sh  local-run-commons.sh
completion/: README.md  __init__.py  git-machete.completion.bash  git-machete.completion.fish  git-machete.completion.zsh  git-machete.fish
debian/: .gitignore  control  files.envsubst  rules
docs/: blog-2.md  blog.md  enforce-docs-up-to-date.sh  enforce-py-docs-up-to-date.sh  enforce-sphinx-man-up-to-date.sh  generate-sphinx-html.sh  generate-sphinx-man.sh  generate_docs.py  generate_py_docs.py  sandbox-setup-2.sh  sandbox-setup.sh  setup-sandbox  update_py_docs.sh
extras/: git-machete-prompt
flake8/: keyword_argument_checker.py
git_machete/: __init__.py  annotation.py  bin.py  cli.py  cli_commands.py  cli_parser.py  client.py  cmd.py  cmdline.py  code_hosting.py  config.py  constants.py  contexts.py  custom_types.py  dispatch.py  docs.py  git.py  (+15 more)
(+467 files in other folders)
