[metadata]
name = git-machete
summary = Probably the sharpest git repository organizer & rebase workflow automation tool you've ever seen ;)
description-file = README.md
long-description-content-type = text/markdown
license = MIT License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = git
author = Pawel Lipski
author-email = pawel.p.lipski@gmail.com
home-page = https://github.com/VirtusLab/git-machete/
project-url = https://github.com/VirtusLab/git-machete/

[files]
packages =
    git_machete

[entry_points]
console_scripts =
    git-machete = git_machete.cmd:main

[wheel]
universal = 1

[pbr]
warnerrors = True
